--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,14 @@ min-width: 400px;
 /* БЛОК СТАТЬЯ =================================== */
 
 .block-article {
-padding-left: 25%;
-padding-right: 25%;
-background-color: #fff;
-max-width: 100%;
-position: relative;
+  padding-left: 25%;
+  padding-right: 25%;
+  background-color: #fff;
+  max-width: 100%;
+}
+
+.conte {
+  position: relative;
 }
 
 /* ВЫНОСКА =================================== */
@@ -32,7 +35,7 @@ display: flex;
 }
 
 .column {
-width: 50%;
+width: auto;
 margin: 0 10px 0 0;
 border-radius: 7px;
 box-sizing: border-box;
@@ -51,7 +54,7 @@ background-color: #fff;
 
 .paragraph {
 color: #000;
-font-size: 17px;
+font-size: 1.1rem;
 font-family: 'Helvetica', Arial, sans-serif;
 margin: 0 0 10px 0;
 max-width: 100%;
@@ -62,7 +65,7 @@ max-width: 100%;
 .heading {
 color: #000;
 font-family: Trebuchet MS, Helvetica, Arial, sans-serif;
-font-size: 38px;
+font-size: 2.375rem;
 margin: 0 0 10px 0;
 max-width: 100%;
 }
@@ -86,7 +89,7 @@ background-color: #f1f1f1;
 margin: 0 0 10px 0;
 max-width: 100%;
 color: #000;
-font-size: 17px;
+font-size: 1.1rem;
 font-family: 'Helvetica', Arial, sans-serif;
 }
 
@@ -121,7 +124,7 @@ text-align: right;
   font-family: Helvetica, Arial, sans-serif;
   transition: background-color 0.3s; /* добавляем плавное изменение цвета фона */
   box-sizing: border-box;
-  width: 30%;
+  width: 100%;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -140,40 +143,34 @@ text-align: right;
 /* ======================================================================  */
 
 .block-article-list {
-list-style-type: disc;
 margin: 0;
-padding-left: 10px;
-margin: 10px 0 0 0;
+max-width: 100%;
+padding-left: 20px;
+}
+
+.block-article-list-li {
+list-style-type: disc;
+margin: 0 0 10px 0;
+color: #000;
+font-size: 17px;
+font-family: 'Helvetica', Arial, sans-serif;
+max-width: 100%;
+}
+
+.block-article-list-ol {
+margin: 0 0 10px 0;
+color: #000;
+font-size: 17px;
+font-family: 'Helvetica', Arial, sans-serif;
+max-width: 100%;
 }
 
 /* ======================================================================  */
 
 .bbl {
-  background-color: #000;
-  color: #fff;
-  max-width: 100%;
-  overflow: scroll;
-  z-index: 1;
-  position: fixed;
-  top: 0; /* Установите верхнюю границу на 0 */
-  left: 0;
-  right: 0;
-  bottom: 90%; /* Установите нижнюю границу на 50px от верха экрана */
-  background-color: yellow;
-  margin: 0;
-}
-
-.bbl2 {
-  background-color: #000;
-  color: #fff;
-  max-width: 100%;
-  overflow: scroll;
-  z-index: 2;
-  position: fixed;
-  top: 90%; /* Установите верхнюю границу на 0 */
-  left: 0;
-  right: 0;
-  bottom: 0; /* Установите нижнюю границу на 50px от верха экрана */
-  background-color: red;
-  margin: 0;
+background-color: #000;
+color: #fff;
+position: sticky;
+left: 0;
+top: 0;
 }
