--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,7 @@ color: #000;
 font-size: 17px;
 font-family: 'Helvetica', Arial, sans-serif;
 max-width: 100%;
+color: #fff;
 }
 
 .block-article-list-ol {
@@ -164,14 +165,34 @@ max-width: 100%;
 
 /* ======================================================================  */
 
-.bbl {
-background-color: rgba(0, 0, 0, 0.5);
+.navigation-heading {
 color: #fff;
+font-family: Arial;
+font-size: 20px;
+margin: 0 0 10px 0;
+max-width: 100%;
+}
+
+.navigation {
+margin: 0;
+max-width: 100%;
+border-radius: 7px;
+padding: 20px 20px 10px 20px;
+font-family: Arial;
+color: #fff;
+background-color: #000;
+}
+
+.navigation-back {
+background-color: rgba(0, 0, 0, 0.5);
 position: sticky;
 left: 0;
 top: 90%;
 margin: 0px;
-font-size: 17px;
+font-size: 20px;
+color: #fff;
 flex-grow: 1;
 padding: 20px;
+font-family: Arial;
+border-radius: 7px;
 }
