--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ border-radius: 7px;
 padding: 20px 20px 10px 20px;
 font-family: Arial;
 color: #fff;
-background-color: #000;
+background-color: rgba(0, 0, 0, 0.5);
 }
 
 .navigation-back {
