--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body {
   background-color: #eeeeee;
   margin: 0;
   padding: 0;
+width: 100%;
+box-sizing: border-box;
 }
 
 header {
@@ -21,6 +23,7 @@ header {
   top: 0;
   position: fixed;
 -webkit-position: fixed;
+box-sizing: border-box;
 }
 
 .section-header {
