--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   background-color: #eeeeee;
   margin: 0;
   padding: 0;
-width: 100%;
+max-width: 100%;
 box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ header {
   background-color: var(--header);
   color: var(--color);
   padding: 1em;
-  width: 100%;
+  max-width: 100%;
   max-height: 3.125em;
   overflow: hidden;
   margin: 0;
