--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
   background-color: var(--header);
   color: var(--color);
   padding: 1em;
-  max-width: 100%;
+  width: 100%;
   max-height: 3.125em;
   overflow: hidden;
   margin: 0;
